# imgen-rs

./: Cargo.toml  sample.ign
src/: component.rs  layout_plan.rs  main.rs  renderer.rs
src/components/: container_component.rs  mod.rs  rect_component.rs  root_component.rs
src/parser/: ast.rs  component_builder.rs  mod.rs
src/primitives/: primitives.rs
src/types/: attributes.rs  expressions.rs  mod.rs  mults.rs  units.rs  values.rs
